--- a/publications_topics.html
+++ b/publications_topics.html
@@ -113,8 +113,12 @@ p{ margin:10px auto}
 <p lang="en-US"><span class="red"> Distributed System and Resource Management: Scheduling and Orchestration </span></p>
 
 
+<p><span class="style11">&bull; Y. Song, L. Jiao, R. Yang, T. Wo and J. Xu. Incentivizing Online Content Caching in Distributed Edge Networks via Auction-Based Subsidization. IEEE SECON, 2022
+	<a href="paper/secon2022.pdf">[paper]</a> 
+	</span></p>
+
 <p><span class="style11"> &bull; X. Sun, W. Wang, S. Qiu, R. Yang*, S. Huang, J. Xu, Z. Wang. STRONGHOLD: Fast and Affordable Billion-scale Deep Learning Model Training. IEEE/ACM International Conference for High Performance Computing, Networking, Storage, and Analysis (SC), 2022
-	(accepted) <a href="paper/sc2022.pdf">[paper]</a> 
+	 <a href="paper/sc2022.pdf">[paper]</a> 
 	</span></p>
 
 <p><span class="style11"> &bull; G. Yeung, B. Borowiec, R. Yang*, A. Friday, R. Harper, P. Garraghan. Horus: Interference-aware and Prediction-based Scheduling in Deep Learning Systems. IEEE Trans. on Parallel and Distributed Systems (TPDS), 2021 
