--- a/index.html
+++ b/index.html
@@ -201,8 +201,9 @@ p{ margin:10px auto}
 
 <p><span class="style11"> <span class="red">[Call for Papers]</span> <a href="call4papers/BDCC-SI-2022.pdf">"Machine Learning for Dependable Edge Computing Systems and Services"</a> Special Issue in the journal of Big Data and Cognitive Computing (BDCC), Deadline: 30 Sept 2022 </span></p>
 
+<p><span class="style11">(18/07/2022) Our work on "Incentivizing Online Edge Caching via Auction-Based Subsidization" is accepted by 19th Annual IEEE International Conference on Sensing, Communication, and Networking (SECON)! Big congrats to Youmei! </span></p>
 
-<p><span class="style11">(27/01/2022) Our work on "STRONGHOLD: Fast and Affordable Billion-scale Deep Learning Model Training" is accepted by the International Conference for High Performance Computing, Networking, Storage, and Analysis (SC) 2022! Big Congrats to Xiaoyang and Shenghao! 
+<p><span class="style11">(14/06/2022) Our work on "STRONGHOLD: Fast and Affordable Billion-scale Deep Learning Model Training" is accepted by the International Conference for High Performance Computing, Networking, Storage, and Analysis (SC) 2022! Big congrats to Xiaoyang and Shenghao! 
 </span></p>
 
 <p><span class="style11">(27/01/2022) received Alan Turing Institute Post-Doctoral Enrichment Award 2022.  
@@ -281,27 +282,27 @@ I have been (co-)leading several China/UK national and international projects in
 <p><span class="style11">~$ pub -rl</span></p> 
 
 
-<p><span class="style11">&bull; T. Li, Z. Hong, Q. Cai, L. Yu, Z. Wen, and R. Yang*. <a href="paper/tkde2021-bissiam.pdf" style="text-decoration: none">BISSIAM: Bispectrum Siamese Network Based Contrastive Learning for UAV Anomaly Detection</a>. IEEE Trans. on Knowledge and Data Engineering (TKDE), 2021 [CCF A/CORE A*] </span></p>
+<p><span class="style11">&bull; T. Li, Z. Hong, Q. Cai, L. Yu, Z. Wen, and R. Yang*. <a href="paper/tkde2021-bissiam.pdf" style="text-decoration: none">BISSIAM: Bispectrum Siamese Network Based Contrastive Learning for UAV Anomaly Detection</a>. IEEE TKDE 2021 [CCF A/CORE A*] </span></p>
 
-<p><span class="style11">&bull; R. Yang', Y. Hei', H. Peng, L. Wang, X. Xu, J. Liu, H. Liu, J. Xu, L. Sun. <a href="paper/tnnls2021-hawk.pdf" style="text-decoration: none">Hawk: Rapid Android Malware Detection through Heterogeneous Graph Neural Network</a>. IEEE Trans. on Neural Networks and Learning Systems (TNNLS), 2021 [CCF B/CORE A*, IF14.255]</span></p>
+<p><span class="style11">&bull; R. Yang', Y. Hei', H. Peng, L. Wang, X. Xu, J. Liu, H. Liu, J. Xu, L. Sun. <a href="paper/tnnls2021-hawk.pdf" style="text-decoration: none">Hawk: Rapid Android Malware Detection through Heterogeneous Graph Neural Network</a>. IEEE TNNLS 2021 [CCF B/CORE A*, IF14.255]</span></p>
 
-<p><span class="style11">&bull; G. Yeung, B. Borowiec, R. Yang*, A. Friday, R. Harper, P. Garraghan. <a href="paper/tpds2021-horus.pdf" style="text-decoration: none">Horus: Interference-Aware and Prediction-Based Scheduling in Deep Learning Systems</a>. IEEE Trans. on Parallel and Distributed Systems (TPDS), 2021 [CCF A/CORE A*]</span></p>
+<p><span class="style11">&bull; G. Yeung, B. Borowiec, R. Yang*, A. Friday, R. Harper, P. Garraghan. <a href="paper/tpds2021-horus.pdf" style="text-decoration: none">Horus: Interference-Aware and Prediction-Based Scheduling in Deep Learning Systems</a>. IEEE TPDS 2021 [CCF A/CORE A*]</span></p>
 
-<p><span class="style11">&bull; H. Peng, R. Yang, Z. Wang, J. Li, L. He, P.S.Yu, A. Y. Zomaya, R. Ranjan. <a href="paper/tc2021.pdf" style="text-decoration: none">LIME: Low-Cost and Incremental Learning for Dynamic Heterogeneous Information Networks</a>.  IEEE Trans. on Computers (TC), 2021 [CCF A/CORE A*]</span></p>
+<p><span class="style11">&bull; H. Peng, R. Yang, Z. Wang, J. Li, L. He, P.S.Yu, A. Y. Zomaya, R. Ranjan. <a href="paper/tc2021.pdf" style="text-decoration: none">LIME: Low-Cost and Incremental Learning for Dynamic Heterogeneous Information Networks</a>. IEEE TC 2021 [CCF A/CORE A*]</span></p>
 
-<p><span class="style11">&bull; H. Peng, R. Zhang, Y. Dou, R. Yang, J. Zhang, and P. S. Yu. <a href="paper/tois2021-riognn.pdf" style="text-decoration: none">Reinforced Neighborhood Selection Guided Multi-Relational Graph Neural Networks</a>. ACM Trans. on Information Systems (TOIS), 2021 [CCF A/CORE A] </span></p>
+<p><span class="style11">&bull; H. Peng, R. Zhang, Y. Dou, R. Yang, J. Zhang, and P. S. Yu. <a href="paper/tois2021-riognn.pdf" style="text-decoration: none">Reinforced Neighborhood Selection Guided Multi-Relational Graph Neural Networks</a>. ACM TOIS 2021 [CCF A/CORE A] </span></p>
 
-<p><span class="style11">&bull; H. Peng, J. Li, Z. Wang, R. Yang, M. Liu, M. Zhang, P. S. Yu and L. He. <a href="paper/tkde2021.pdf" style="text-decoration: none"> Lifelong Property Price Prediction: A Case Study for the Toronto Real Estate Market</a>.  IEEE Trans. on Knowledge and Data Engineering (TKDE), 2021  [CCF A/CORE A*]</span></p> 
+<p><span class="style11">&bull; H. Peng, J. Li, Z. Wang, R. Yang, M. Liu, M. Zhang, P. S. Yu and L. He. <a href="paper/tkde2021.pdf" style="text-decoration: none"> Lifelong Property Price Prediction: A Case Study for the Toronto Real Estate Market</a>. IEEE TKDE 2021 [CCF A/CORE A*]</span></p> 
 
-<p><span class="style11">&bull; R. Yang, C. Hu, X. Sun, P. Garraghan, T. Wo, Z. Wen, H. Peng, J. Xu and C. Li. <a href="paper/tpds2020-rose.pdf" style="text-decoration: none">Performance-aware Speculative Resource Oversubscription for Large-scale Clusters</a>. IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020  [CCF A/CORE A*]</span></p>
+<p><span class="style11">&bull; R. Yang, C. Hu, X. Sun, P. Garraghan, T. Wo, Z. Wen, H. Peng, J. Xu and C. Li. <a href="paper/tpds2020-rose.pdf" style="text-decoration: none">Performance-aware Speculative Resource Oversubscription for Large-scale Clusters</a>. IEEE TPDS 2020 [CCF A/CORE A*]</span></p>
 
 	
 <p><span class="style11">&bull; Z. Wen, T. Lin, R. Yang*, S. Ji, R. Ranjan, A. Romanovsky, C. Lin, J. Xu. <a href="paper/tpds2019-gapar-full.pdf" style="text-decoration: none">GA-Par: Dependable Microservice Orchestration Framework for Geo-Distributed Clouds</a>. 
-IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  [CCF A/CORE A]</span></p>
+IEEE TPDS 2019  [CCF A/CORE A]</span></p>
 
-<p><span class="style11">&bull; P. Garraghan, X. Ouyang, R. Yang*, D. Mckee and J. Xu. <a href="paper/tsc2016b.pdf" style="text-decoration: none">Straggler Root-cause and Impact Analysis for Massive-scale Virtualized Cloud Datacenters</a>. IEEE Trans. on Services Computing (TSC), 2019 [CCF B/CORE A*, IF11.019]</span></p>
+<p><span class="style11">&bull; P. Garraghan, X. Ouyang, R. Yang*, D. Mckee and J. Xu. <a href="paper/tsc2016b.pdf" style="text-decoration: none">Straggler Root-cause and Impact Analysis for Massive-scale Virtualized Cloud Datacenters</a>. IEEE TSC 2019 [CCF B/CORE A*, IF11.019]</span></p>
 
-<p><span class="style11">&bull; R. Yang, Y. Zhang, P. Garraghan, Y. Feng, J. Ouyang, J. Xu, Z. Zhang, C. Li. <a href="paper/tsc2016.pdf" style="text-decoration: none">Reliable Compute Service in Massive-scale Systems through Rapid Low-cost Failover</a>. IEEE Trans. on Services Computing (TSC), 2017 [CCF B/CORE A*, IF11.019]</span></p>
+<p><span class="style11">&bull; R. Yang, Y. Zhang, P. Garraghan, Y. Feng, J. Ouyang, J. Xu, Z. Zhang, C. Li. <a href="paper/tsc2016.pdf" style="text-decoration: none">Reliable Compute Service in Massive-scale Systems through Rapid Low-cost Failover</a>. IEEE TSC 2017 [CCF B/CORE A*, IF11.019]</span></p>
 
 <p><span class="style11">&bull; R. Yang, Z. Wen, D. Mckee, T. Lin, J. Xu and P. Garraghan. <a href="https://www.wiley.com/en-ag/Fog+and+Fogonomics%3A+Challenges+and+Practices+of+Fog+Computing%2C+Communication%2C+Networking%2C+Strategy%2C+and+Economics-p-9781119501091" style="text-decoration: none"> Software-Defined Fog Orchestration for IoT Services</a>. Book Chapter, Fog and Fogonomics Challenges and Practices, Wiley, ISBN: 978-1-119-50109-1, 2020</span></p>
 
@@ -309,9 +310,11 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  [CCF A/CORE A]</sp
 
 <p><span class="style11">&bull; X. Sun, W. Wang, S. Qiu, R. Yang*, S. Huang, J. Xu, Z. Wang. <a href="paper/sc2022.pdf" style="text-decoration: none">STRONGHOLD: Fast and Affordable Billion-scale Deep Learning Model Training</a>. ACM/IEEE SC 2022 [CCF A/CORE A*] </span></p>
 
-<p><span class="style11">&bull; R. Yang', J. Zhu', C. Hu, T. Wo, S. Xue, J. Ouyang and J. Xu. <a href="paper/ccgrid2021.pdf" style="text-decoration: none">Perph: A Workload Co-location Agent with Online Performance Prediction and Resource Inference</a> <a href="paper/socc2019-perphon.pdf" style="text-decoration: none">(poster, demo)</a>. IEEE/ACM CCGRID 2021 [CORE A] and ACM SoCC 2019 [CCF B]</span></p>
+<p><span class="style11">&bull; Y. Song, L. Jiao, R. Yang, T. Wo and J. Xu. <a href="paper/secon2022.pdf" style="text-decoration: none">Incentivizing Online Content Caching in Distributed Edge Networks via Auction-Based Subsidization</a>. IEEE SECON 2022 [CCF B/CORE B] </span></p>
 
-<p><span class="style11">&bull; X. Sun, C. Hu, R. Yang*, P. Garraghan, T. Wo, J. Xu, J. Zhu, C. Li.  <a href="paper/icdcs2018.pdf" style="text-decoration: none">ROSE: Cluster Resource Scheduling via Speculative Over-subscription</a> <a href="paper/sosp2017-poster.pdf" style="text-decoration: none">(poster, demo)</a>. IEEE ICDCS 2018 [CCF B/CORE A], and ACM SOSP 2017 [CCF A/CORE A*]</span></p>
+<p><span class="style11">&bull; R. Yang', J. Zhu', C. Hu, T. Wo, S. Xue, J. Ouyang and J. Xu. <a href="paper/ccgrid2021.pdf" style="text-decoration: none">Perph: A Workload Co-location Agent with Online Performance Prediction and Resource Inference</a> <a href="paper/socc2019-perphon.pdf" style="text-decoration: none">(poster, demo)</a>. IEEE/ACM CCGRID 2021 [CORE A] ACM SoCC 2019 [CCF B]</span></p>
+
+<p><span class="style11">&bull; X. Sun, C. Hu, R. Yang*, P. Garraghan, T. Wo, J. Xu, J. Zhu, C. Li.  <a href="paper/icdcs2018.pdf" style="text-decoration: none">ROSE: Cluster Resource Scheduling via Speculative Over-subscription</a> <a href="paper/sosp2017-poster.pdf" style="text-decoration: none">(poster, demo)</a>. IEEE ICDCS 2018 [CCF B/CORE A] ACM SOSP 2017 [CCF A/CORE A*]</span></p>
 
 <p><span class="style11">&bull;  Z. Zhang, C. Li, Y. Tao, R. Yang*, H. Tang and J. Xu. <a href="paper/vldb2014.pdf" style="text-decoration: none">Fuxi: a Fault-Tolerant Resource Management and Job Scheduling System at Internet Scale</a>. VLDB 2014 [CCF A/CORE A*]</span></p>
 
