--- a/publications.html
+++ b/publications.html
@@ -109,8 +109,12 @@ p{ margin:10px auto}
 
 <p lang="en-US"><span class="red">2022</span></p>
 
+<p><span class="style11">&bull; Y. Song, L. Jiao, R. Yang, T. Wo and J. Xu. Incentivizing Online Content Caching in Distributed Edge Networks via Auction-Based Subsidization. IEEE SECON, 2022
+<a href="paper/secon2022.pdf">[paper]</a> 
+</span></p>
+
 <p><span class="style11"> &bull; X. Sun, W. Wang, S. Qiu, R. Yang*, S. Huang, J. Xu, Z. Wang. STRONGHOLD: Fast and Affordable Billion-scale Deep Learning Model Training. IEEE/ACM International Conference for High Performance Computing, Networking, Storage, and Analysis (SC), 2022
-(accepted) <a href="paper/sc2022.pdf">[paper]</a> 
+ <a href="paper/sc2022.pdf">[paper]</a> 
 </span></p>
 
 
