--- a/index.html
+++ b/index.html
@@ -201,7 +201,9 @@ p{ margin:10px auto}
 
 <p><span class="style11"> <span class="red">[Call for Papers]</span> <a href="call4papers/BDCC-SI-2022.pdf">"Machine Learning for Dependable Edge Computing Systems and Services"</a> Special Issue in the journal of Big Data and Cognitive Computing (BDCC), Deadline: 30 Sept 2022 </span></p>
 
-<p><span class="style11">(18/07/2022) Our work on "Incentivizing Online Edge Caching via Auction-Based Subsidization" is accepted by 19th Annual IEEE International Conference on Sensing, Communication, and Networking (SECON)! Big congrats to Youmei! </span></p>
+<p><span class="style11">(23/08/2022) Our work on QoS-Aware Co-Scheduling is accepted by IEEE Trans. on Parallel and Distributed Systems. Big congrats to Jianyong and Xiaoyang! </span></p>
+
+<p><span class="style11">(18/07/2022) Our work on "Incentivizing Online Edge Caching via Auction-Based Subsidization" is accepted by 19th IEEE International Conference on Sensing, Communication, and Networking (SECON)! Big congrats to Youmei! </span></p>
 
 <p><span class="style11">(14/06/2022) Our work on "STRONGHOLD: Fast and Affordable Billion-scale Deep Learning Model Training" is accepted by the International Conference for High Performance Computing, Networking, Storage, and Analysis (SC) 2022! Big congrats to Xiaoyang and Shenghao! 
 </span></p>
@@ -281,6 +283,7 @@ I have been (co-)leading several China/UK national and international projects in
 
 <p><span class="style11">~$ pub -rl</span></p> 
 
+<p><span class="style11">&bull; R. Yang', J. Zhu', X. Sun, T. Wo, C. Hu, H. Peng, J. Xiao, A. Y. Zomaya, J. Xu. <a href="paper/tpds2022-toposcaling.pdf" style="text-decoration: none">QoS-Aware Co-Scheduling for Distributed Long-Running Applications on Shared Clusters</a>, IEEE TPDS 2022 [CCF A/CORE A*] </span></p>
 
 <p><span class="style11">&bull; T. Li, Z. Hong, Q. Cai, L. Yu, Z. Wen, and R. Yang*. <a href="paper/tkde2021-bissiam.pdf" style="text-decoration: none">BISSIAM: Bispectrum Siamese Network Based Contrastive Learning for UAV Anomaly Detection</a>. IEEE TKDE 2021 [CCF A/CORE A*] </span></p>
 
@@ -310,7 +313,7 @@ IEEE TPDS 2019  [CCF A/CORE A]</span></p>
 
 <p><span class="style11">&bull; X. Sun, W. Wang, S. Qiu, R. Yang*, S. Huang, J. Xu, Z. Wang. <a href="paper/sc2022.pdf" style="text-decoration: none">STRONGHOLD: Fast and Affordable Billion-scale Deep Learning Model Training</a>. ACM/IEEE SC 2022 [CCF A/CORE A*] </span></p>
 
-<p><span class="style11">&bull; Y. Song, L. Jiao, R. Yang, T. Wo and J. Xu. <a href="paper/secon2022.pdf" style="text-decoration: none">Incentivizing Online Content Caching in Distributed Edge Networks via Auction-Based Subsidization</a>. IEEE SECON 2022 [CCF B/CORE B] </span></p>
+<p><span class="style11">&bull; Y. Song, L. Jiao, R. Yang, T. Wo and J. Xu. <a href="paper/secon2022.pdf" style="text-decoration: none">Incentivizing Online Content Caching in Distributed Edge Networks via Auction-Based Subsidization</a>. IEEE SECON 2022 [CCF B] </span></p>
 
 <p><span class="style11">&bull; R. Yang', J. Zhu', C. Hu, T. Wo, S. Xue, J. Ouyang and J. Xu. <a href="paper/ccgrid2021.pdf" style="text-decoration: none">Perph: A Workload Co-location Agent with Online Performance Prediction and Resource Inference</a> <a href="paper/socc2019-perphon.pdf" style="text-decoration: none">(poster, demo)</a>. IEEE/ACM CCGRID 2021 [CORE A] ACM SoCC 2019 [CCF B]</span></p>
 
@@ -381,7 +384,7 @@ I had the opportunity to work closely with many institutes around the world and 
 I have been co-advising and/or working closely with many students mainly from COLAB. The programmes primarily include PhD and postgraduate projects (MSc research programme in China and MSc projects of module COMP5200M and COMP3211 in University of Leeds.) </span></p>
 
 <p><span class="style11">~$  <strong> team -l current </strong> </span></p>
-<p><span class="style11">&bull; PhD Students: <a href="https://xshaun.github.io/" style="text-decoration: none">Xiaoyang Sun</a> (2019.9- , Uni of Leeds, with Prof. Jie Xu and Dr. Zheng Wang), Yiming Hei (2019.9- , BDBC and Beihang Uni., with Prof. Jianwei Liu and Dr. Hao Peng), Youmei Song (2017.9- , BDBC and Beihang Uni., with Prof. Tianyu Wo) </span></p>
+<p><span class="style11">&bull; PhD Students: <a href="https://xshaun.github.io/" style="text-decoration: none">Xiaoyang Sun</a> (2019.9- , Uni of Leeds, with Prof. Jie Xu and Prof. Zheng Wang), Yiming Hei (2019.9- , BDBC and Beihang Uni., with Prof. Jianwei Liu and Dr. Hao Peng), Youmei Song (2017.9- , BDBC and Beihang Uni., with Prof. Tianyu Wo), Jiayu Zhao (2021.9- , Uni of Leeds, with Prof. Zheng Wang) </span></p>
 <p><span class="style11">&bull; MSc Students: Zhihao Yuan, Junhao Wei, Yifan Zhang, Wenjie Xia, Yixin Jiang, Kaidi Jin, Qian Chu (MSc. of COMP5200M, 2022 Spring, Uni. of Leeds, with Prof. Jie Xu and Dr. Satish Kumar) </span></p>
 <p><span class="style11">&bull; Also closely working Dr. Satish Kumar, Dr. Clément Mommessin </span></p>
 
@@ -420,7 +423,7 @@ I have been collaborating closely with many brilliant researchers around the wor
 
 <p><span class="style11">&bull; 	
 <a href="http://www.zhenyu.info/" style="text-decoration: none">Dr. Zhenyu Wen</a> (now Professor at Zhejiang University of Technology), Dr. Xue Ouyang (now assistant professor at NUDT), <a href="https://tlin-tao-lin.github.io/" style="text-decoration: none">Tao Lin (EPFL)</a></span></p>
-<p><span class="style11">&bull; Dr. Lei Cui (now associate professor at CAS), <a href="https://penghao-buaa.github.io/" style="text-decoration: none">Dr. Hao Peng</a> (now assistant professor at Beihang University) </span></p>
+<p><span class="style11">&bull; Dr. Lei Cui (now associate professor at CAS), <a href="https://penghao-buaa.github.io/" style="text-decoration: none">Dr. Hao Peng</a> (now associate professor at Beihang University) </span></p>
 
 <p><span class="style11">&bull; Jin Ouyang, Jiamang Wang (senior staff engineer at Alibaba Group), etc. </span></p>
 
