--- a/publications.html
+++ b/publications.html
@@ -109,11 +109,15 @@ p{ margin:10px auto}
 
 <p lang="en-US"><span class="red">2022</span></p>
 
-<p><span class="style11">&bull; Y. Song, L. Jiao, R. Yang, T. Wo and J. Xu. Incentivizing Online Content Caching in Distributed Edge Networks via Auction-Based Subsidization. IEEE SECON, 2022
+<p><span class="style11">&bull; R. Yang', J. Zhu', X. Sun, T. Wo, C. Hu, H. Peng, J. Xiao, A. Y. Zomaya, J. Xu. QoS-Aware Co-Scheduling for Distributed Long-Running Applications on Shared Clusters, IEEE Trans. on Parallel and Distributed Systems (TPDS) 
+<a href="paper/tpds2022-toposcaling.pdf">[paper]</a> 
+</span></p>
+
+<p><span class="style11">&bull; Y. Song, L. Jiao, R. Yang, T. Wo and J. Xu. Incentivizing Online Content Caching in Distributed Edge Networks via Auction-Based Subsidization. 19th IEEE International Conference on Sensing, Communication, and Networking (SECON) 
 <a href="paper/secon2022.pdf">[paper]</a> 
 </span></p>
 
-<p><span class="style11"> &bull; X. Sun, W. Wang, S. Qiu, R. Yang*, S. Huang, J. Xu, Z. Wang. STRONGHOLD: Fast and Affordable Billion-scale Deep Learning Model Training. IEEE/ACM International Conference for High Performance Computing, Networking, Storage, and Analysis (SC), 2022
+<p><span class="style11"> &bull; X. Sun, W. Wang, S. Qiu, R. Yang*, S. Huang, J. Xu, Z. Wang. STRONGHOLD: Fast and Affordable Billion-scale Deep Learning Model Training. IEEE/ACM International Conference for High Performance Computing, Networking, Storage, and Analysis (SC)
  <a href="paper/sc2022.pdf">[paper]</a> 
 </span></p>
 
