--- a/publications_topics.html
+++ b/publications_topics.html
@@ -113,7 +113,11 @@ p{ margin:10px auto}
 <p lang="en-US"><span class="red"> Distributed System and Resource Management: Scheduling and Orchestration </span></p>
 
 
-<p><span class="style11">&bull; Y. Song, L. Jiao, R. Yang, T. Wo and J. Xu. Incentivizing Online Content Caching in Distributed Edge Networks via Auction-Based Subsidization. IEEE SECON, 2022
+<p><span class="style11">&bull; R. Yang', J. Zhu', X. Sun, T. Wo, C. Hu, H. Peng, J. Xiao, A. Y. Zomaya, J. Xu. QoS-Aware Co-Scheduling for Distributed Long-Running Applications on Shared Clusters, IEEE Trans. on Parallel and Distributed Systems (TPDS), 2022
+	<a href="paper/tpds2022-toposcaling.pdf">[paper]</a> 
+	</span></p>
+
+<p><span class="style11">&bull; Y. Song, L. Jiao, R. Yang, T. Wo and J. Xu. Incentivizing Online Content Caching in Distributed Edge Networks via Auction-Based Subsidization. 19th IEEE International Conference on Sensing, Communication, and Networking (SECON), 2022
 	<a href="paper/secon2022.pdf">[paper]</a> 
 	</span></p>
 
