--- a/publications.html
+++ b/publications.html
@@ -105,7 +105,7 @@ p{ margin:10px auto}
 <hr style="width:100%;text-align:left;margin-left:0">
 
 <p lang="en-US"><span class="incline"> Notice: The copyright of these papers is with the respective publishers. It is being reproduced here for timely dissemination of scholarly information.   </span> &nbsp; &nbsp;</p>
-<p lang="en-US"><span class="incline"> * = corresponding author of the paper with students or team members supervised by me. '= co-first author with equal contribution by alphabetical order </span> &nbsp; &nbsp;</p>
+<p lang="en-US"><span class="incline"> * = corresponding author of the paper with students or team members supervised by me. '= co-first authors with equal contribution by alphabetical order </span> &nbsp; &nbsp;</p>
 
 <p lang="en-US"><span class="red">2022</span></p>
 
@@ -117,7 +117,7 @@ p{ margin:10px auto}
 <a href="paper/secon2022.pdf">[paper]</a> 
 </span></p>
 
-<p><span class="style11"> &bull; X. Sun, W. Wang, S. Qiu, R. Yang*, S. Huang, J. Xu, Z. Wang. STRONGHOLD: Fast and Affordable Billion-scale Deep Learning Model Training. IEEE/ACM International Conference for High Performance Computing, Networking, Storage, and Analysis (SC)
+<p><span class="style11"> &bull; X. Sun, W. Wang, S. Qiu, R. Yang, S. Huang, J. Xu, Z. Wang. STRONGHOLD: Fast and Affordable Billion-scale Deep Learning Model Training. IEEE/ACM International Conference for High Performance Computing, Networking, Storage, and Analysis (SC)
  <a href="paper/sc2022.pdf">[paper]</a> 
 </span></p>
 
@@ -155,7 +155,7 @@ Contrastive Learning for UAV Anomaly Detection,  IEEE Trans. on Knowledge and Da
 <p><span class="style11">&bull; Y. Song, T. Wo, R. Yang*, Q. Shen and J. Xu. Joint Optimization of Cache Placement and Request Routing in Unreliable Networks. Journal of Parallel and Distributed Computing (JPDC)  <a href="paper/jpdc2021.pdf">[paper]</a> 
 </span></p>
 
-<p><span class="style11">  &bull; H. Peng, J. Li, Z. Wang, R. Yang, M.Liu, M. Zhang, P. S. Yu, L. He. Lifelong Property Price Prediction: A Case Study for The Toronto Real Estate Market.  IEEE Trans. on Knowledge and Data Engineering (TKDE) <a href="paper/tkde2021.pdf">[paper]</a> 
+<p><span class="style11">  &bull; H. Peng, J. Li, Z. Wang, R. Yang, M. Liu, M. Zhang, P. S. Yu, L. He. Lifelong Property Price Prediction: A Case Study for The Toronto Real Estate Market.  IEEE Trans. on Knowledge and Data Engineering (TKDE) <a href="paper/tkde2021.pdf">[paper]</a> 
 </span></p>
 
 <p><span class="style11">&bull; H. Peng, J. Li, Y. Song, R. Yang, R. Ranjan, P. S. Yu, L. He. Streaming Social Event Detection and Evolution Discovery in Heterogeneous Information Networks, ACM Trans. on Knowledge Discovery from Data (TKDD) <a href="paper/tkdd2021.pdf">[paper]</a> 
