--- a/publications_topics.html
+++ b/publications_topics.html
@@ -121,7 +121,7 @@ p{ margin:10px auto}
 	<a href="paper/secon2022.pdf">[paper]</a> 
 	</span></p>
 
-<p><span class="style11"> &bull; X. Sun, W. Wang, S. Qiu, R. Yang*, S. Huang, J. Xu, Z. Wang. STRONGHOLD: Fast and Affordable Billion-scale Deep Learning Model Training. IEEE/ACM International Conference for High Performance Computing, Networking, Storage, and Analysis (SC), 2022
+<p><span class="style11"> &bull; X. Sun, W. Wang, S. Qiu, R. Yang, S. Huang, J. Xu, Z. Wang. STRONGHOLD: Fast and Affordable Billion-scale Deep Learning Model Training. IEEE/ACM International Conference for High Performance Computing, Networking, Storage, and Analysis (SC), 2022
 	 <a href="paper/sc2022.pdf">[paper]</a> 
 	</span></p>
 
