--- a/index.html
+++ b/index.html
@@ -211,12 +211,6 @@ p{ margin:10px auto}
 <p><span class="style11">(27/01/2022) received Alan Turing Institute Post-Doctoral Enrichment Award 2022.  
 </span></p>
 
-<p><span class="style11">(01/11/2021) One survey paper on text classification is accepted by ACM Trans. on  Intelligent Systems and Technology (TIST). 
-</span></p>
-
-<p><span class="style11">(01/10/2021) Our work on UAV anomaly detection through contrastive learning and work on RL Guided Multi-Relational Graph Neural Networks have been accepted by IEEE Trans. on Knowledge and Data Engineering (TKDE) and ACM Trans. on Information Systems (TOIS), respectively. 
-</span></p>
-
 <p><span class="style11">~$ No news is good news...Check <a href="news.html">older events</a>. </span></p>
 </div>
 
@@ -261,15 +255,16 @@ I have been (co-)leading several China/UK national and international projects in
 
 <p><span class="style11">&bull; 2011.9 - 2017.2: &nbsp; Teaching and Research Assistant, Team Leader, SIGRS and MSDS, Beihang University, Beijing, China &nbsp;&nbsp; </span></p> 
 
-<p><span class="style11">&bull; 2014.2 - 2016.2: &nbsp;&nbsp; R&D Intern (Mentored by <a href = "https://www.linkedin.com/in/zhuo-joe-zhang-24913433" style="text-decoration: none">Zhuo (Joe) Zhang</a> and <a href="https://cn.linkedin.com/in/chao-li-5749352b" style="text-decoration: none">Chao Li</a>), Fuxi Distributed Scheduling Group, Apsara, <a href="http://www.aliyun.com" style="text-decoration: none"> Alibaba Cloud Computing Inc.</a>, Beijing, China &nbsp;&nbsp; &nbsp;</span></p>
+<p><span class="style11">&bull; 2014.2 - 2016.2: &nbsp; R&D Intern (Mentored by <a href = "https://www.linkedin.com/in/zhuo-joe-zhang-24913433" style="text-decoration: none">Zhuo (Joe) Zhang</a> and <a href="https://cn.linkedin.com/in/chao-li-5749352b" style="text-decoration: none">Chao Li</a>), Fuxi Distributed Scheduling Group, Apsara, <a href="http://www.aliyun.com" style="text-decoration: none"> Alibaba Cloud Computing Inc.</a>, Beijing, China &nbsp;&nbsp; &nbsp;</span></p>
 
 <p><span class="style11">&bull; 2016.4 - 2016.5: &nbsp; Visiting Researcher (work with Dr. Zhenyu Wen), &nbsp; University of Edinburgh, UK &nbsp;&nbsp; </span></p> 
 
-<p><span class="style11">&bull; 2017.3 - 2018.4: &nbsp;&nbsp; Research Scientist and Project Director, Beijing Advanced Innovation Center for Big Data and Brain Computing (BDBC), Beijing, China &nbsp;&nbsp;</span></p>
+<p><span class="style11">&bull; 2017.3 - 2018.4: &nbsp; Research Scientist and Project Director, Beijing Advanced Innovation Center for Big Data and Brain Computing (BDBC), Beijing, China &nbsp;&nbsp;</span></p>
  
 <p><span class="style11">&bull; 2018.2 - 2018.2: &nbsp; Visiting Researcher (work with Dr. Peter Garraghan), &nbsp; Lancaster University, UK &nbsp;&nbsp; </span></p> 
 
-<p><span class="style11">&bull; 2018.5 - 2020.8: &nbsp;&nbsp; Research Scientist, Edgetic Ltd., UK </span></p> 
+<p><span class="style11">&bull; 2018.5 - 2020.8: &nbsp; Research Scientist, Edgetic Ltd., UK </span></p> 
+
 <p><span class="style11">&bull; 2017.10 - 2020.8: &nbsp; Adjunct Research Fellow at University of Leeds, UK </span></p>
 </div>
 
@@ -278,52 +273,34 @@ I have been (co-)leading several China/UK national and international projects in
 
 <div id="div_pub">
 
-<p><span class="Bolder">Selected Publications &nbsp; </span></p>
+<p><span class="Bolder">Selected Recent Publications </span></p>
 
 
 <p><span class="style11">~$ pub -rl</span></p> 
 
-<p><span class="style11">&bull; R. Yang', J. Zhu', X. Sun, T. Wo, C. Hu, H. Peng, J. Xiao, A. Y. Zomaya, J. Xu. <a href="paper/tpds2022-toposcaling.pdf" style="text-decoration: none">QoS-Aware Co-Scheduling for Distributed Long-Running Applications on Shared Clusters</a>, IEEE TPDS 2022 [CCF A/CORE A*] </span></p>
-
-<p><span class="style11">&bull; T. Li, Z. Hong, Q. Cai, L. Yu, Z. Wen, and R. Yang*. <a href="paper/tkde2021-bissiam.pdf" style="text-decoration: none">BISSIAM: Bispectrum Siamese Network Based Contrastive Learning for UAV Anomaly Detection</a>. IEEE TKDE 2021 [CCF A/CORE A*] </span></p>
-
-<p><span class="style11">&bull; R. Yang', Y. Hei', H. Peng, L. Wang, X. Xu, J. Liu, H. Liu, J. Xu, L. Sun. <a href="paper/tnnls2021-hawk.pdf" style="text-decoration: none">Hawk: Rapid Android Malware Detection through Heterogeneous Graph Neural Network</a>. IEEE TNNLS 2021 [CCF B/CORE A*, IF14.255]</span></p>
-
-<p><span class="style11">&bull; G. Yeung, B. Borowiec, R. Yang*, A. Friday, R. Harper, P. Garraghan. <a href="paper/tpds2021-horus.pdf" style="text-decoration: none">Horus: Interference-Aware and Prediction-Based Scheduling in Deep Learning Systems</a>. IEEE TPDS 2021 [CCF A/CORE A*]</span></p>
-
-<p><span class="style11">&bull; H. Peng, R. Yang, Z. Wang, J. Li, L. He, P.S.Yu, A. Y. Zomaya, R. Ranjan. <a href="paper/tc2021.pdf" style="text-decoration: none">LIME: Low-Cost and Incremental Learning for Dynamic Heterogeneous Information Networks</a>. IEEE TC 2021 [CCF A/CORE A*]</span></p>
-
-<p><span class="style11">&bull; H. Peng, R. Zhang, Y. Dou, R. Yang, J. Zhang, and P. S. Yu. <a href="paper/tois2021-riognn.pdf" style="text-decoration: none">Reinforced Neighborhood Selection Guided Multi-Relational Graph Neural Networks</a>. ACM TOIS 2021 [CCF A/CORE A] </span></p>
-
-<p><span class="style11">&bull; H. Peng, J. Li, Z. Wang, R. Yang, M. Liu, M. Zhang, P. S. Yu and L. He. <a href="paper/tkde2021.pdf" style="text-decoration: none"> Lifelong Property Price Prediction: A Case Study for the Toronto Real Estate Market</a>. IEEE TKDE 2021 [CCF A/CORE A*]</span></p> 
-
-<p><span class="style11">&bull; R. Yang, C. Hu, X. Sun, P. Garraghan, T. Wo, Z. Wen, H. Peng, J. Xu and C. Li. <a href="paper/tpds2020-rose.pdf" style="text-decoration: none">Performance-aware Speculative Resource Oversubscription for Large-scale Clusters</a>. IEEE TPDS 2020 [CCF A/CORE A*]</span></p>
-
-	
-<p><span class="style11">&bull; Z. Wen, T. Lin, R. Yang*, S. Ji, R. Ranjan, A. Romanovsky, C. Lin, J. Xu. <a href="paper/tpds2019-gapar-full.pdf" style="text-decoration: none">GA-Par: Dependable Microservice Orchestration Framework for Geo-Distributed Clouds</a>. 
-IEEE TPDS 2019  [CCF A/CORE A]</span></p>
-
-<p><span class="style11">&bull; P. Garraghan, X. Ouyang, R. Yang*, D. Mckee and J. Xu. <a href="paper/tsc2016b.pdf" style="text-decoration: none">Straggler Root-cause and Impact Analysis for Massive-scale Virtualized Cloud Datacenters</a>. IEEE TSC 2019 [CCF B/CORE A*, IF11.019]</span></p>
-
-<p><span class="style11">&bull; R. Yang, Y. Zhang, P. Garraghan, Y. Feng, J. Ouyang, J. Xu, Z. Zhang, C. Li. <a href="paper/tsc2016.pdf" style="text-decoration: none">Reliable Compute Service in Massive-scale Systems through Rapid Low-cost Failover</a>. IEEE TSC 2017 [CCF B/CORE A*, IF11.019]</span></p>
-
-<p><span class="style11">&bull; R. Yang, Z. Wen, D. Mckee, T. Lin, J. Xu and P. Garraghan. <a href="https://www.wiley.com/en-ag/Fog+and+Fogonomics%3A+Challenges+and+Practices+of+Fog+Computing%2C+Communication%2C+Networking%2C+Strategy%2C+and+Economics-p-9781119501091" style="text-decoration: none"> Software-Defined Fog Orchestration for IoT Services</a>. Book Chapter, Fog and Fogonomics Challenges and Practices, Wiley, ISBN: 978-1-119-50109-1, 2020</span></p>
-
-<p><span class="style11">&bull; Z. Wen, R. Yang*, P. Garraghan, T. Lin, J. Xu and M. Rovatsos. <a href="paper/ic2017.pdf" style="text-decoration: none">Fog Orchestration for IoT Services</a>. IEEE Internet Computing, 2017 [CORE B]</span></p>
-
-<p><span class="style11">&bull; X. Sun, W. Wang, S. Qiu, R. Yang*, S. Huang, J. Xu, Z. Wang. <a href="paper/sc2022.pdf" style="text-decoration: none">STRONGHOLD: Fast and Affordable Billion-scale Deep Learning Model Training</a>. ACM/IEEE SC 2022 [CCF A/CORE A*] </span></p>
+<p><span class="style11">&bull; R. Yang, J. Zhu, X. Sun, T. Wo, C. Hu, H. Peng, J. Xiao, A. Y. Zomaya, J. Xu. <a href="paper/tpds2022-toposcaling.pdf" style="text-decoration: none">QoS-Aware Co-Scheduling for Distributed Long-Running Applications on Shared Clusters</a>, IEEE TPDS 2022 [CCF A/CORE A*] </span></p>
 
 <p><span class="style11">&bull; Y. Song, L. Jiao, R. Yang, T. Wo and J. Xu. <a href="paper/secon2022.pdf" style="text-decoration: none">Incentivizing Online Content Caching in Distributed Edge Networks via Auction-Based Subsidization</a>. IEEE SECON 2022 [CCF B] </span></p>
 
-<p><span class="style11">&bull; R. Yang', J. Zhu', C. Hu, T. Wo, S. Xue, J. Ouyang and J. Xu. <a href="paper/ccgrid2021.pdf" style="text-decoration: none">Perph: A Workload Co-location Agent with Online Performance Prediction and Resource Inference</a> <a href="paper/socc2019-perphon.pdf" style="text-decoration: none">(poster, demo)</a>. IEEE/ACM CCGRID 2021 [CORE A] ACM SoCC 2019 [CCF B]</span></p>
+<p><span class="style11">&bull; X. Sun, W. Wang, S. Qiu, R. Yang, S. Huang, J. Xu, Z. Wang. <a href="paper/sc2022.pdf" style="text-decoration: none">STRONGHOLD: Fast and Affordable Billion-scale Deep Learning Model Training</a>. ACM/IEEE SC 2022 [CCF A/CORE A*] </span></p>
 
-<p><span class="style11">&bull; X. Sun, C. Hu, R. Yang*, P. Garraghan, T. Wo, J. Xu, J. Zhu, C. Li.  <a href="paper/icdcs2018.pdf" style="text-decoration: none">ROSE: Cluster Resource Scheduling via Speculative Over-subscription</a> <a href="paper/sosp2017-poster.pdf" style="text-decoration: none">(poster, demo)</a>. IEEE ICDCS 2018 [CCF B/CORE A] ACM SOSP 2017 [CCF A/CORE A*]</span></p>
+<p><span class="style11">&bull; G. Yeung, B. Borowiec, R. Yang, A. Friday, R. Harper, P. Garraghan. <a href="paper/tpds2021-horus.pdf" style="text-decoration: none">Horus: Interference-Aware and Prediction-Based Scheduling in Deep Learning Systems</a>. IEEE TPDS 2021 [CCF A/CORE A*]</span></p>
 
-<p><span class="style11">&bull;  Z. Zhang, C. Li, Y. Tao, R. Yang*, H. Tang and J. Xu. <a href="paper/vldb2014.pdf" style="text-decoration: none">Fuxi: a Fault-Tolerant Resource Management and Job Scheduling System at Internet Scale</a>. VLDB 2014 [CCF A/CORE A*]</span></p>
+<p><span class="style11">&bull; T. Li, Z. Hong, Q. Cai, L. Yu, Z. Wen, and R. Yang. <a href="paper/tkde2021-bissiam.pdf" style="text-decoration: none">BISSIAM: Bispectrum Siamese Network Based Contrastive Learning for UAV Anomaly Detection</a>. IEEE TKDE 2021 [CCF A/CORE A*] </span></p>
 
-<p><span class="style11">&bull;  L. Cui, J. Li, T. Wo, B. Li, R. Yang, Y. Cao, and J. Huai. <a href="paper/lisa2014.pdf" style="text-decoration: none">HotRestore: A Fast Restore System for Virtual Machine Cluster</a>. USENIX LISA 2014 [CCF B]</span></p>
+<p><span class="style11">&bull; R. Yang, Y. Hei, H. Peng, L. Wang, X. Xu, J. Liu, H. Liu, J. Xu, L. Sun. <a href="paper/tnnls2021-hawk.pdf" style="text-decoration: none">Hawk: Rapid Android Malware Detection through Heterogeneous Graph Neural Network</a>. IEEE TNNLS 2021 [CCF B/CORE A*, IF14.255]</span></p>
 
-<p><span class="style11">&bull;  X. Ouyang, P. Garraghan, R. Yang, P. Townend and J. Xu. <a href="paper/dsn2016.pdf" style="text-decoration: none">Reducing Late-Timing Failure at Scale: Straggler Root-Cause Analysis in Cloud Datacenters</a>. IEEE DSN 2016 [CCF B/CORE A] </span></p>
+<p><span class="style11">&bull; H. Peng, R. Yang, Z. Wang, J. Li, L. He, P. S. Yu, A. Y. Zomaya, R. Ranjan. <a href="paper/tc2021.pdf" style="text-decoration: none">LIME: Low-Cost and Incremental Learning for Dynamic Heterogeneous Information Networks</a>. IEEE TC 2021 [CCF A/CORE A*]</span></p>
+
+<p><span class="style11">&bull; H. Peng, R. Zhang, Y. Dou, R. Yang, J. Zhang, and P. S. Yu. <a href="paper/tois2021-riognn.pdf" style="text-decoration: none">Reinforced Neighborhood Selection Guided Multi-Relational Graph Neural Networks</a>. ACM TOIS 2021 [CCF A/CORE A] </span></p>
+
+<p><span class="style11">&bull; R. Yang, C. Hu, X. Sun, P. Garraghan, T. Wo, Z. Wen, H. Peng, J. Xu and C. Li. <a href="paper/tpds2020-rose.pdf" style="text-decoration: none">Performance-aware Speculative Resource Oversubscription for Large-scale Clusters</a>. IEEE TPDS 2020 [CCF A/CORE A*]</span></p>
+
+<p><span class="style11">&bull; Z. Wen, T. Lin, R. Yang, S. Ji, R. Ranjan, A. Romanovsky, C. Lin, J. Xu. <a href="paper/tpds2019-gapar-full.pdf" style="text-decoration: none">GA-Par: Dependable Microservice Orchestration Framework for Geo-Distributed Clouds</a>. IEEE TPDS 2019 [CCF A/CORE A]</span></p>
+
+<p><span class="style11">&bull; R. Yang, J. Zhu, C. Hu, T. Wo, S. Xue, J. Ouyang and J. Xu. <a href="paper/ccgrid2021.pdf" style="text-decoration: none">Perph: A Workload Co-location Agent with Online Performance Prediction and Resource Inference</a> <a href="paper/socc2019-perphon.pdf" style="text-decoration: none">(poster, demo)</a>. IEEE/ACM CCGRID 2021 [CORE A] ACM SoCC 2019 [CCF B]</span></p>
+
+<p><span class="style11">&bull; X. Sun, C. Hu, R. Yang, P. Garraghan, T. Wo, J. Xu, J. Zhu, C. Li.  <a href="paper/icdcs2018.pdf" style="text-decoration: none">ROSE: Cluster Resource Scheduling via Speculative Over-subscription</a> <a href="paper/sosp2017-poster.pdf" style="text-decoration: none">(poster, demo)</a>. IEEE ICDCS 2018 [CCF B/CORE A] ACM SOSP 2017 [CCF A/CORE A*]</span></p>
 
 <p><span class="style11">~$ pub -al More publications can be found in:
 <a href="publications.html" style="text-decoration: none">[Complete List]</a> 
@@ -344,7 +321,7 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="style11">~$  <strong> grants -l </strong> </span></p>
 
-<p><span class="style11">&bull; Large-scale GPU Cluster Scheduling, Industry-funded Collaboration, co-I, 2022.4 - present </span></p> 
+<p><span class="style11">&bull; Large-scale GPU Cluster Scheduling, Industry-funded Collaboration, Co-I, 2022.4 - present </span></p> 
 
 <p><span class="style11">&bull; Resilient Multi-Agent Deep Reinforcement Learning for Green Logistics Scheduling, funded by the Turing Enrichment Scheme, the Alan Turing Institute, PI, 2022.3 - present </span></p> 
 
@@ -381,18 +358,19 @@ I had the opportunity to work closely with many institutes around the world and 
 
 
 <p><span class="style11"> 
-I have been co-advising and/or working closely with many students mainly from COLAB. The programmes primarily include PhD and postgraduate projects (MSc research programme in China and MSc projects of module COMP5200M and COMP3211 in University of Leeds.) </span></p>
+I have been co-advising and/or working closely with many students/PDRAs mainly from COLAB. The programmes primarily include PhD and postgraduate projects (MSc research programme in China and MSc projects of module COMP5200M and COMP3211 in University of Leeds.) </span></p>
 
 <p><span class="style11">~$  <strong> team -l current </strong> </span></p>
-<p><span class="style11">&bull; PhD Students: <a href="https://xshaun.github.io/" style="text-decoration: none">Xiaoyang Sun</a> (2019.9- , Uni of Leeds, with Prof. Jie Xu and Prof. Zheng Wang), Yiming Hei (2019.9- , BDBC and Beihang Uni., with Prof. Jianwei Liu and Dr. Hao Peng), Youmei Song (2017.9- , BDBC and Beihang Uni., with Prof. Tianyu Wo), Jiayu Zhao (2021.9- , Uni of Leeds, with Prof. Zheng Wang) </span></p>
-<p><span class="style11">&bull; MSc Students: Zhihao Yuan, Junhao Wei, Yifan Zhang, Wenjie Xia, Yixin Jiang, Kaidi Jin, Qian Chu (MSc. of COMP5200M, 2022 Spring, Uni. of Leeds, with Prof. Jie Xu and Dr. Satish Kumar) </span></p>
-<p><span class="style11">&bull; Also closely working Dr. Satish Kumar, Dr. Clément Mommessin </span></p>
+<p><span class="style11">&bull; PhD Students: <a href="https://xshaun.github.io/" style="text-decoration: none">Xiaoyang Sun</a> (2019.9- , Uni of Leeds, with Prof. Jie Xu and Prof. Zheng Wang), Yiming Hei (2019.9- , BDBC and Beihang Uni., with Prof. Jianwei Liu and Dr. Hao Peng), Youmei Song (2017.9- , BDBC and Beihang Uni., with Prof. Tianyu Wo), Jiayu Zhao (2021.9- , Uni of Leeds, with Prof. Zheng Wang), Yingguang Yang (2021.7-, USTC, with Prof. Haiyong Xie and Dr. Hao Peng) </span></p>
+<p><span class="style11">&bull; PDRA Cohort: Dr. Satish Kumar, Dr. Zeinab Nezami, Dr. Clément Mommessin, etc. </span></p>
 
 
 <p><span class="style11">~$  <strong> team -l alumni </strong> </span></p>
 
 <p><span class="style11">&bull; Jianyong Zhu (PhD., 2017.9-2022.3 , BDBC and Beihang Uni., with Prof. Chunming Hu, first employment Assistant Professor at NCEPU)</span></p>
 <p><span class="style11">&bull; <a href="https://uk.linkedin.com/in/gingfung-matthew-yeung-a71688a2" style="text-decoration: none">Gingfung Yeung</a> (PhD., 2019.1-2021.12, Lancaster University, UK, with Dr. Peter Garraghan, first employment at Huawei UK) </span></p>
+
+<p><span class="style11">&bull; Zhihao Yuan, Junhao Wei, Yifan Zhang, Wenjie Xia, Yixin Jiang, Kaidi Jin, Qian Chu (MSc. of COMP5200M, 2022 Spring, Uni. of Leeds, with Prof. Jie Xu) </span></p>
 
 <p><span class="style11">&bull; Chris von Fay-Siebenburgen, Ziyao Wang, Zixuan Xu, Jacob Hall, Adam Stoddart (BSc, 2021-2022, Uni. of Leeds, with Prof. Jie Xu) </span></p>
 <p><span class="style11">&bull; Wang Tang, Zhenbin Jin, Xianjie Yang (MSc. of COMP5200M, Spring 2021, Uni. of Leeds) </span></p>
@@ -438,9 +416,7 @@ I have been collaborating closely with many brilliant researchers around the wor
  
 <p><span class="style11">&bull; Cloud Computing (CS61839, Graduate Level, Beihang University), Spring 2017 (together with Prof. Chunming Hu et. al)</span></p> 
 
-<p><span class="style11">&bull; Operating Systems (XJCO2211, Undergraduate Level, University of Leeds), Autumn 2020 (together with Prof. Jie Xu)</span></p> 
-
-<p><span class="style11">&bull; Operating Systems (XJCO2211, Undergraduate Level, University of Leeds), Autumn 2021 (together with Prof. Jie Xu)</span></p> 
+<p><span class="style11">&bull; Operating Systems (XJCO2211, Undergraduate Level, University of Leeds), Autumn 2020/2021/2022 (together with Prof. Jie Xu)</span></p> 
 
 <p><span class="style11">&bull; Talks given in different venues such as academic conferences or industrial meeting-ups can be found here: <a href="presentations.html" style="text-decoration: none">~$ talks</a> </span></p>
 
@@ -461,7 +437,7 @@ I have been collaborating closely with many brilliant researchers around the wor
 <p><span class="style11">&bull; Area/Track Chair: IEEE International Conference on Cloud Computing (CLOUD) 2021. </span></p>
 
 
-<p><span class="style11">&bull; PC Member: IJCAI'21-'22, ECAI'21-'22, IEEE CLOUD'20-'22, ACM/IEEE UCC'18-'21,  IEEE/ACM BDCAT'16-'21, etc. </span></p>
+<p><span class="style11">&bull; PC Member: IJCAI'21-'22, ECAI'21-'22, IEEE CLOUD'20-'22, ACM/IEEE UCC'18-'22,  IEEE/ACM BDCAT'16-'22, etc. </span></p>
 
 
 <p><span class="style11">&bull; Journal Reviewers: TPDS, TDSC, TC, TKDE, TSC, TSE, TCC, TKDD, CSUR, etc. </span></p> 
@@ -513,7 +489,7 @@ I have been collaborating closely with many brilliant researchers around the wor
 
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  </span></p>
-<p><span class="style11">  Updated by June 2022 </span></p>
+<p><span class="style11">  Updated by August 2022 </span></p>
 
 </td>
 
