--- a/news.html
+++ b/news.html
@@ -75,6 +75,12 @@ p{ margin:10px auto}
 <p><span class="Bolder">Events</span></p>
   
 
+<p><span class="style11">(01/11/2021) One survey paper on text classification is accepted by ACM Trans. on  Intelligent Systems and Technology (TIST). 
+</span></p>
+
+<p><span class="style11">(01/10/2021) Our work on UAV anomaly detection through contrastive learning and work on RL Guided Multi-Relational Graph Neural Networks have been accepted by IEEE Trans. on Knowledge and Data Engineering (TKDE) and ACM Trans. on Information Systems (TOIS), respectively. 
+</span></p>
+
 <p><span class="style11">(12/09/2021) Our work on lifelong house price prediction and work on malware detection have been accepted by IEEE Trans. on Knowledge and Data Engineering (TKDE) and IEEE Trans. on Neural Networks and Learning Systems (TNNLS) respectively. 
 </span></p> 
 
