--- a/index.html
+++ b/index.html
@@ -87,18 +87,17 @@ p{ margin:10px auto}
 </span>
 
 <span class="STYLE15"> &nbsp;
-<img src="images/uol.jpg" width="160" alt="Renyu" border="0" title="University of Leeds" /> 
+<img src="images/uol.jpg" width="150" alt="University of Leeds" border="0" title="University of Leeds" /> 
 <!--img src="images/edgetic.jpg" width="220" height="60" alt="Renyu" border="0" title="Edgetic" /-->
-&nbsp; 
-<img src="images/bdbc.png" width="200" alt="Renyu" border="0" title="BDBC" /> 
-&nbsp; 
-<!--img src="images/beihang.jpg" width="240" height="65" alt="Renyu" border="0" title="BUAA" /-->
-&nbsp; 
+<img src="images/ati.png" width="100" alt="Alan Turing Institute" border="0" title="Alan Turing Institute" /> 
+<img src="images/lida.png" width="150" alt="LIDA" border="0" title="LIDA" /> 
+<img src="images/bdbc.png" width="160" alt="BDBC" border="0" title="BDBC" /> 
+<img src="images/beihang.jpg" width="150"  alt="Beihang University" border="0" title="Beihang University" />
 
 </span>
 
 <br>
-<table style="width: 60%; height: auto;">
+<table style="width: 70%; height: auto;">
 <tbody>
 <tr>
 
@@ -128,6 +127,7 @@ p{ margin:10px auto}
 <p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Research Fellow</p>
 
 <p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://eps.leeds.ac.uk/computing" style="text-decoration: none">School of Computing</a>, <a href="https://eps.leeds.ac.uk/" style="text-decoration: none">Faculty of Engineering and Physical Sciences</a></p>
+<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://lida.leeds.ac.uk/" style="text-decoration: none">Leeds Institute for Data Analytics (LIDA)</a></p>
 
 <p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.leeds.ac.uk" style="text-decoration: none">University of Leeds</a>, UK </p>
 
@@ -219,7 +219,7 @@ p{ margin:10px auto}
 <div id="div_bio">
 
 <p class="Bolder">Short Bio</p> 
-<p><span class="style11"> I am currently a UK EPSRC-funded research fellow at the <a href="https://eps.leeds.ac.uk/computing" style="text-decoration: none">School of Computing</a>, <a href="https://eps.leeds.ac.uk/" style="text-decoration: none">Faculty of Engineering and Physical Sciences</a>, University of Leeds, UK. I am also a visiting research scientist with the <a href="http://bdbc.buaa.edu.cn" style="text-decoration: none">Beijing Advanced Innovation Center for Big Data and Brain Computing (BDBC)</a>, Beijing, China. I was a research scientist at Edgetic Ltd., a UK-based startup high-tech company that employs distributed scheduling, machine learning, hardware-software modeling, etc. to reshape the future of data center efficiency. 
+<p><span class="style11"> I am currently a UK EPSRC-funded research fellow at the <a href="https://eps.leeds.ac.uk/computing" style="text-decoration: none">School of Computing</a>, <a href="https://eps.leeds.ac.uk/" style="text-decoration: none">Faculty of Engineering and Physical Sciences</a>, and <a href="https://lida.leeds.ac.uk/" style="text-decoration: none">Leeds Institute for Data Analytics (LIDA)</a>, University of Leeds, UK. I am also a visiting research scientist with the <a href="http://bdbc.buaa.edu.cn" style="text-decoration: none">Beijing Advanced Innovation Center for Big Data and Brain Computing (BDBC)</a>, Beijing, China. I was a research scientist at Edgetic Ltd., a UK-based startup high-tech company that employs distributed scheduling, machine learning, hardware-software modeling, etc. to reshape the future of data center efficiency. 
 I have been (co-)leading several China/UK national and international projects in terms of distributed resource management and scheduling, massive-scale data analysis for intelligent decision making, and deep learning systems. We build large-scale resource management infrastructures and system profiling framework to support those functionalities. 
 </span></p>
 
@@ -486,10 +486,11 @@ I have been collaborating closely with many brilliant researchers around the wor
 	</span></p> 
 </center>
 
-
-
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  </span></p>
 <p><span class="style11">  Updated by August 2022 </span></p>
+
+ 
+	
 
 </td>
 
