--- a/publications_topics.html
+++ b/publications_topics.html
@@ -238,7 +238,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 
 <p lang="en-US"><span class="red"> Big Data and Deep Learning: Systems and Applications </span></p>
 
-<p><span class="style11">&bull; R. Yang', Y. Yang', Y. Li, K. Cui, Z. Yang, Y. Wang, J.Xu, H. Xie. RoSGAS: Adaptive Social Bot Detection with Reinforced Self-supervised GNN Architecture Search.  arXiv preprint arXiv:2206.06757
+<p><span class="style11">&bull; R. Yang', Y. Yang', Y. Li, K. Cui, Z. Yang, Y. Wang, J. Xu, H. Xie. RoSGAS: Adaptive Social Bot Detection with Reinforced Self-supervised GNN Architecture Search.  Transactions on the Web (TWEB), 2022
 <a href="paper/tweb2022-rosgas.pdf">[paper]</a><a href="https://arxiv.org/pdf/2206.06757">[arxiv]</a> 
 </span></p>
 
