--- a/index.html
+++ b/index.html
@@ -201,6 +201,8 @@ p{ margin:10px auto}
 
 <p><span class="style11"> <span class="red">[Call for Papers]</span> <a href="call4papers/BDCC-SI-2022.pdf">"Machine Learning for Dependable Edge Computing Systems and Services"</a> Special Issue in the journal of Big Data and Cognitive Computing (BDCC), new deadline: <span class="red">30 Sept 2023</span> </span></p>
 
+<p><span class="style11">(20/10/2022) Our work on Reinforced Self-supervised GNN Architecture Search is accepted by ACM Trans. on the Web. </span></p>
+
 <p><span class="style11">(23/08/2022) Our work on QoS-Aware Co-Scheduling is accepted by IEEE Trans. on Parallel and Distributed Systems. Big congrats to Jianyong and Xiaoyang! </span></p>
 
 <p><span class="style11">(18/07/2022) Our work on "Incentivizing Online Edge Caching via Auction-Based Subsidization" is accepted by 19th IEEE International Conference on Sensing, Communication, and Networking (SECON)! Big congrats to Youmei! </span></p>
@@ -363,6 +365,7 @@ I have been co-advising and/or working closely with many students/PDRAs mainly f
 <p><span class="style11">~$  <strong> team -l current </strong> </span></p>
 <p><span class="style11">&bull; PhD Students: <a href="https://xshaun.github.io/" style="text-decoration: none">Xiaoyang Sun</a> (2019.9- , Uni of Leeds, with Prof. Jie Xu and Prof. Zheng Wang), Yiming Hei (2019.9- , BDBC and Beihang Uni., with Prof. Jianwei Liu and Dr. Hao Peng), Youmei Song (2017.9- , BDBC and Beihang Uni., with Prof. Tianyu Wo), Jiayu Zhao (2021.9- , Uni of Leeds, with Prof. Zheng Wang), Yingguang Yang (2021.7-, USTC, with Prof. Haiyong Xie and Dr. Hao Peng) </span></p>
 <p><span class="style11">&bull; PDRA Cohort: Dr. Satish Kumar, Dr. Zeinab Nezami, Dr. Clément Mommessin, etc. </span></p>
+<p><span class="style11">&bull; BSc Students: Leo Bishop, Danielle Kushnir, Thomas Killeen, Dominik Strak (BSc, 2022-2023, Uni. of Leeds, with Prof. Jie Xu) </span></p>
 
 
 <p><span class="style11">~$  <strong> team -l alumni </strong> </span></p>
