--- a/publications.html
+++ b/publications.html
@@ -126,6 +126,9 @@ p{ margin:10px auto}
 <a href="paper/tpds2021-horus.pdf">[paper]</a> 
 </span></p>
 
+<p><span class="style11">&bull; R. Yang', Y. Yang', Y. Li, K. Cui, Z. Yang, Y. Wang, J. Xu, H. Xie. RoSGAS: Adaptive Social Bot Detection with Reinforced Self-supervised GNN Architecture Search. ACM Trans. on the Web (TWEB), 2022
+<a href="paper/tweb2022-rosgas.pdf">[paper]</a><a href="https://arxiv.org/pdf/2206.06757.pdf">[arxiv]</a> 
+
 <p><span class="style11">&bull; H. Peng, R. Yang, Z. Wang, J. Li, L. He, P. S. Yu, A. Y. Zomaya, R. Ranjan. LIME: Low-Cost and Incremental Learning for Dynamic Heterogeneous Information Networks. IEEE Trans. on Computers (TC) 
 <a href="paper/tc2021.pdf">[paper]</a> 
 </span></p>
@@ -135,9 +138,6 @@ p{ margin:10px auto}
 
 <p><span class="style11">&bull; Z. Wen, H. Hu, R. Yang*, B. Qian, R. Sham, R. Sun, J. Xu, P. Patel, O. Rana, S. Dustdar, R. Ranjan. Orchestrating Networked Machine Learning Applications using Autosteer, IEEE Internet Computing <a href="paper/ic2022.pdf">[paper]</a> 
 </span></p>
-
-<p><span class="style11">&bull; R. Yang', Y. Yang', Y. Li, K. Cui, Z. Yang, Y. Wang, J.Xu, H. Xie. RoSGAS: Adaptive Social Bot Detection with Reinforced Self-supervised GNN Architecture Search. arXiv Preprint, arXiv:2206.06757
-<a href="paper/tweb2022-rosgas.pdf">[paper]</a><a href="https://arxiv.org/pdf/2206.06757.pdf">[arxiv]</a> 
 
 <p><span class="style11">&bull; C. Mommessin', R. Yang', N. Shakhlevich, X. Sun, S. Kumar, J. Xiao, J. Xu. Affinity-Aware Resource Provisioning for Long-Running Applications in Shared Clusters. arXiv Preprint, arXiv:2208.12738
 <a href="https://arxiv.org/pdf/2208.12738.pdf">[arxiv]</a>
