--- a/publications.html
+++ b/publications.html
@@ -104,7 +104,7 @@ p{ margin:10px auto}
 
 <hr style="width:100%;text-align:left;margin-left:0">
 
-<p lang="en-US"><span class="incline"> Notice: The copyright of these papers is with the respective publishers. It is being reproduced here for timely dissemination of scholarly information.   </span> &nbsp; &nbsp;</p>
+<p lang="en-US"><span class="incline"> Notice: The copyright of these papers is with the respective publishers. It is being reproduced here for timely dissemination of scholarly information. </span> &nbsp; &nbsp;</p>
 <p lang="en-US"><span class="incline"> * = corresponding author of the paper with students or team members supervised by me. '= co-first authors with equal contribution by alphabetical order </span> &nbsp; &nbsp;</p>
 
 <p lang="en-US"><span class="red">2023</span></p>
@@ -116,6 +116,8 @@ p{ margin:10px auto}
 <p><span class="style11">&bull; Y. Yang, R. Yang*, H. Peng, Y. Li, T. Li, Y. Liao, P. Zhou. FedACK: Federated Adversarial Contrastive Knowledge Distillation for Cross-Lingual and Cross-Model Social Bot Detection, ACM the Web Conference (WWW) <a href="paper/www2023-fedack.pdf">[paper]</a></span></p>
 
 <p><span class="style11">&bull; D. Zou, H. Peng, X. Huang, R. Yang, J. Li, J. Wu, C. Liu, P. S. Yu. SE-GSL: A General and Effective Graph Structure Learning Framework through Structural Entropy Optimization, ACM the Web Conference (WWW) <a href="paper/www2023-segsl.pdf">[paper]</a></span></p>
+
+<p><span class="style11">&bull; J. Zhao, R. Yang, S. Qiu, Z. Wang. Enhancing High-dimensional Bayesian Optimization by Optimizing the Acquisition Function Maximizer Initialization. arXiv Preprint, arXiv:2302.08298 <a href="https://arxiv.org/abs/2302.08298.pdf">[arxiv]</a> </span></p>
 
 <p lang="en-US"><span class="red">2022</span></p>
 
