--- a/index.html
+++ b/index.html
@@ -228,9 +228,9 @@ p{ margin:10px auto}
 	deep learning systems and applications such as graph representation learning, anomaly detection, etc.
 </span>
 
-<p><span class="style11"> I have published 50+ refereed journal and conference papers, including top ACM/IEEE Transactions and conference 
-	proceedings such as TPDS, TC, TKDE, TNNLS, TSC, TOIS, TKDD, JPDC, ACM Computing Surveys (CSUR), VLDB, SC, WWW, ICDCS, DSN, SoCC, SECON, 
-	etc. I won the Best Paper Award in IEEE ISADS 2013 for energy-efficient computing and Alan Turing Institute Post-Doctoral 
+<p><span class="style11"> I have published 60+ refereed journal and conference papers (<a href="http://scholar.google.com/citations?user=H_x5laoAAAAJ&hl=en" style="text-decoration: none">Googe Scholar</a> 1750+ citations, i10-index=34, h-index=20, by Feb. 2023), 
+	including top ACM/IEEE Transactions and conference proceedings such as TPDS, TC, TKDE, TNNLS, TSC, TOIS, TKDD, JPDC, ACM Computing Surveys (CSUR), 
+	VLDB, SC, WWW, ICDCS, DSN, SoCC, SECON, etc. I won the Best Paper Award in IEEE ISADS 2013 for energy-efficient computing and Alan Turing Institute Post-Doctoral 
 	Enrichment Award 2022 for resilient deep reinforcement learning, and was awarded the Grand Class of Scientific and 
 	Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) 
 	for the key contribution to the reliable resource management at massive scale and its industrial and societal impact.
@@ -269,19 +269,20 @@ p{ margin:10px auto}
 
 <p><span class="Bolder">Academia & Industry Experience  </span></p>
 
-<p><span class="style11">&bull; 2011.9 - 2017.2: &nbsp; Teaching and Research Assistant, Team Leader, SIGRS and MSDS, Beihang University, Beijing, China &nbsp;&nbsp; </span></p> 
+<p><span class="style11">&bull; 2011.9 - 2017.2: &nbsp; Teaching and Research Assistant, Team Leader, Networked Computing Group and MSDS, Beihang University, Beijing, China </span></p> 
 
-<p><span class="style11">&bull; 2014.2 - 2016.2: &nbsp; R&D Intern (Mentored by <a href = "https://www.linkedin.com/in/zhuo-joe-zhang-24913433" style="text-decoration: none">Zhuo (Joe) Zhang</a> and <a href="https://cn.linkedin.com/in/chao-li-5749352b" style="text-decoration: none">Chao Li</a>), Fuxi Distributed Scheduling Group, Apsara, <a href="http://www.aliyun.com" style="text-decoration: none"> Alibaba Cloud Computing Inc.</a>, Beijing, China &nbsp;&nbsp; &nbsp;</span></p>
+<p><span class="style11">&bull; 2014.2 - 2016.2: &nbsp; R&D Intern (Mentored by <a href = "https://www.linkedin.com/in/zhuo-joe-zhang-24913433" style="text-decoration: none">Zhuo (Joe) Zhang</a> and <a href="https://cn.linkedin.com/in/chao-li-5749352b" style="text-decoration: none">Chao Li</a>), Fuxi Distributed Scheduling Group, <a href="http://www.aliyun.com" style="text-decoration: none"> Alibaba Group</a>, Beijing, China </span></p>
 
-<p><span class="style11">&bull; 2016.4 - 2016.5: &nbsp; Visiting Researcher (work with Dr. Zhenyu Wen), &nbsp; University of Edinburgh, UK &nbsp;&nbsp; </span></p> 
+<p><span class="style11">&bull; 2016.4 - 2016.5: &nbsp; Visiting Researcher (work with Dr. Zhenyu Wen), University of Edinburgh, Edinburgh, UK</span></p> 
 
-<p><span class="style11">&bull; 2017.3 - 2018.5: &nbsp; Research Scientist and Project Director, Beijing Advanced Innovation Center for Big Data and Brain Computing (BDBC), Beijing, China &nbsp;&nbsp;</span></p>
+<p><span class="style11">&bull; 2017.3 - 2018.5: &nbsp; Research Scientist and Project Manager, Beijing Advanced Innovation Center for Big Data and Brain Computing (BDBC), Beijing, China</span></p>
  
-<p><span class="style11">&bull; 2018.2 - 2018.2: &nbsp; Visiting Researcher (work with Dr. Peter Garraghan), &nbsp; Lancaster University, UK &nbsp;&nbsp; </span></p> 
+<p><span class="style11">&bull; 2018.2 - 2018.2: &nbsp; Visiting Researcher (work with Dr. Peter Garraghan), Lancaster University, Lancashire, UK </span></p> 
 
-<p><span class="style11">&bull; 2018.6 - 2020.8: &nbsp; Research Scientist, Edgetic Ltd., UK </span></p> 
+<p><span class="style11">&bull; 2018.6 - 2020.8: &nbsp; Research Scientist, Edgetic Ltd., UK and Adjunct Research Fellow at University of Leeds, Leeds, UK </span></p> 
 
-<p><span class="style11">&bull; 2017.10 - 2020.8: &nbsp; Adjunct Research Fellow at University of Leeds, UK </span></p>
+<p><span class="style11">&bull; 2020.9 - 2023.5: &nbsp; Lead Research Fellow, University of Leeds, Leeds, UK </span></p>
+
 </div>
 
 <hr style="width:100%;text-align:left;margin-left:0">
@@ -336,14 +337,14 @@ p{ margin:10px auto}
 
 <div id="div_grants">
 
-<p><span class="Bolder">Selected Research Grants </span></p>
+<p><span class="Bolder">Selected Research Grants</span></p>
 
 <p><span class="style11">  
 I had the opportunity to work closely with many institutes around the world and engaged in many government/industry funded research projects to solve real-world problems with innovative cloud and analytic technologies.</span></p>
 
 <p><span class="style11">~$  <strong> grants -l </strong> </span></p>
 
-<p><span class="style11">&bull; Algorithmic Scheduling Support for Efficient AI Model Training (~£35K), Kuaishou Research Gift Award, Co-I, 2023.1 - 2023.12 </span></p> 
+<p><span class="style11">&bull; Algorithmic Scheduling Support for Efficient AI Model Training (~£35K), Kuaishou Research Gift Award, Co-I, 2023 </span></p> 
 
 <p><span class="style11">&bull; Resilient Multi-Agent Deep Reinforcement Learning for Green Logistics Scheduling, funded by the Turing Enrichment Scheme, the Alan Turing Institute, PI, 2022.3 - 2022.10 </span></p> 
 
@@ -506,7 +507,7 @@ I have been collaborating closely with many brilliant researchers around the wor
 </center>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  </span></p>
-<p><span class="style11">  Updated by Dec 2022 </span></p>
+<p><span class="style11">  Updated by Feb 2023 </span></p>
 
  
 	
