--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ p{ margin:10px auto}
 	deep learning systems and applications such as graph representation learning, anomaly detection, etc.
 </span>
 
-<p><span class="style11"> I have published 60+ refereed journal and conference papers (<a href="http://scholar.google.com/citations?user=H_x5laoAAAAJ&hl=en" style="text-decoration: none">Googe Scholar</a> 1750+ citations, i10-index=34, h-index=20, by Feb. 2023), 
+<p><span class="style11"> I have published 60+ refereed journal and conference papers (<a href="http://scholar.google.com/citations?user=H_x5laoAAAAJ&hl=en" style="text-decoration: none">Googe Scholar</a> 1,750+ citations, i10-index=34, h-index=20, by Feb. 2023), 
 	including top ACM/IEEE Transactions and conference proceedings such as TPDS, TC, TKDE, TNNLS, TSC, TOIS, TKDD, JPDC, ACM Computing Surveys (CSUR), 
 	VLDB, SC, WWW, ICDCS, DSN, SoCC, SECON, etc. I won the Best Paper Award in IEEE ISADS 2013 for energy-efficient computing and Alan Turing Institute Post-Doctoral 
 	Enrichment Award 2022 for resilient deep reinforcement learning, and was awarded the Grand Class of Scientific and 
@@ -251,10 +251,18 @@ p{ margin:10px auto}
 <div id="div_interest">
 
 <p><span class="Bolder">Research Interests </span></p>
-<p><span class="style11">Broadly, I am interested in designing system modules and/or mechanisms for tackling trade-offs in efficiency, performance, reliability and cost for distributed systems of big data, cloud computing and IoT at scale. My research mainly focuses on: 
-	1) resource efficiency of large-scale datacenters through data-driven design, QoS-aware scheduling and resource management, and multi-objective optimization, etc.; 
-	2) system dependability by leveraging fault tolerance and failover, long-tail task mitigation, and quantitative reliability modeling etc.; 
-	3) machine/deep learning systems and applications including data-centric engineering, GPU scheduling and parallelism, graph representation learning, anomaly detection, etc. </span></p>
+<p><span class="style11">Broadly, I am interested in designing system modules and/or mechanisms for tackling trade-offs in efficiency, performance, reliability and cost for distributed systems of big data, cloud computing and IoT at scale. My research mainly focuses on: </span></p>
+	<p><span class="style11">&bull; Resource efficiency of large-scale datacenters through 
+		QoS-aware scheduling and resource management [<a href="paper/vldb2014.pdf" style="text-decoration: none">VLDB'14</a>,<a href="paper/icdcs2018.pdf" style="text-decoration: none">ICDCS'18</a>,<a href="paper/socc2019-perphon.pdf" style="text-decoration: none">SoCC'19</a>,<a href="paper/tpds2020-rose.pdf" style="text-decoration: none">TPDS'20a</a>,<a href="paper/ccgrid2021.pdf" style="text-decoration: none">CCGRID'21</a>,<a href="paper/tpds2022-toposcaling.pdf" style="text-decoration: none">TPDS'22a</a>], 
+		and multi-objective optimization [<a href="paper/tpds2019-gapar-full.pdf" style="text-decoration: none">TPDS'20b</a>,<a href="paper/jpdc2021-elsevier.pdf" style="text-decoration: none">JPDC'21</a>,<a href="paper/secon2022.pdf" style="text-decoration: none">SECON'22</a>,<a href="paper/jpdc2023.pdf" style="text-decoration: none">JPDC'23</a>], etc.; </span></p>
+	<p><span class="style11">&bull; System dependability by leveraging 
+		fault tolerance and failover [<a href="paper/vldb2014.pdf" style="text-decoration: none">VLDB'14</a>,<a href="paper/lisa2014.pdf" style="text-decoration: none">LISA'14</a>,<a href="paper/hase2016.pdf" style="text-decoration: none">HASE'16</a>,<a href="paper/tsc2016.pdf" style="text-decoration: none">TSC'17</a>], 
+		long-tail task mitigation [<a href="paper/dsn2016.pdf" style="text-decoration: none">DSN'16</a>,<a href="paper/tsc2016b.pdf" style="text-decoration: none">TSC'19</a>], 
+		and quantitative reliability modeling [<a href="paper/tpds2019-gapar-full.pdf" style="text-decoration: none">TPDS'20b</a>,<a href="paper/TR2016.pdf" style="text-decoration: none">TechReport'16</a>] etc.; </span></p>
+	<p><span class="style11">&bull; Deep learning systems and applications including data-centric engineering [<a href="paper/sose2016.pdf" style="text-decoration: none">SOSE'16</a>,<a href="paper/csur2020.pdf" style="text-decoration: none">CSUR'20</a>,<a href="paper/tkde2021.pdf" style="text-decoration: none">TKDE'23</a>], 
+		GPU scheduling and parallelism [<a href="paper/tpds2021-horus.pdf" style="text-decoration: none">TPDS'22b</a>,<a href="paper/sc2022.pdf" style="text-decoration: none">SC'22</a>], 
+		graph representation learning [<a href="paper/tc2021.pdf" style="text-decoration: none">TC'21</a>,<a href="paper/tois2021-riognn.pdf" style="text-decoration: none">TOIS'21</a>,<a href="paper/www2023-segsl.pdf" style="text-decoration: none">WWW'23a</a>], 
+		anomaly detection [<a href="paper/tnnls2021-hawk.pdf" style="text-decoration: none">TNNLS'21</a>,<a href="paper/tkde2021-bissiam.pdf" style="text-decoration: none">TKDE'21</a>,<a href="paper/tweb2022-rosgas.pdf" style="text-decoration: none">TWEB'22</a>,<a href="paper/www2023-fedack.pdf" style="text-decoration: none">WWW'23b</a>], etc. </span></p>
 </div>
 
 
