--- a/publications.html
+++ b/publications.html
@@ -98,9 +98,9 @@ p{ margin:10px auto}
 </div>
 
 
-<p><span class="style10">Recent Publications (By Year) &nbsp;&nbsp;&nbsp; <a href="./index.html">[home]</a> 
-	<a href="./publications_topics.html">[topics]</a>
-	<a href="./publications.html">[years]</a></span>&nbsp;&nbsp; &nbsp;&nbsp;</p>
+<p><span class="style10">Publications &nbsp;&nbsp;&nbsp; <a href="./index.html">[Home]</a> 
+	<a href="./publications_topics.html">[By Topic]</a>
+	<a href="./publications.html">[By Year]</a></span>&nbsp;&nbsp; &nbsp;&nbsp;</p>
 
 <hr style="width:100%;text-align:left;margin-left:0">
 
