--- a/publications_topics.html
+++ b/publications_topics.html
@@ -99,9 +99,9 @@ p{ margin:10px auto}
 &nbsp;
 </div>
 
-<p><span class="style10">Recent Publications (By Year) &nbsp;&nbsp;&nbsp; <a href="./index.html">[home]</a> 
-	<a href="./publications_topics.html">[topics]</a>
-	<a href="./publications.html">[years]</a></span>&nbsp;&nbsp; &nbsp;&nbsp;</p>
+<p><span class="style10">Publications &nbsp;&nbsp;&nbsp; <a href="./index.html">[Home]</a> 
+	<a href="./publications_topics.html">[By Topic]</a>
+	<a href="./publications.html">[By Year]</a></span>&nbsp;&nbsp; &nbsp;&nbsp;</p>
 
 <hr style="width:100%;text-align:left;margin-left:0">
 
@@ -199,7 +199,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020
 	Contrastive Learning for UAV Anomaly Detection,  IEEE Trans. on Knowledge and Data Engineering (TKDE), 2021 <a href="paper/tkde2021-bissiam.pdf">[paper]</a> 
 	</span></p>
 
-<p><span class="style11">&bull; R. Yang', Y.Hei', H. Peng, L. Wang, X. Xu, J. Liu, H. Liu, J. Xu, L. Sun. Hawk: Reliable Android Malware Detection through Heterogeneous Graph Neural Network. IEEE Trans. on Neural Networks and Learning Systems (TNNLS), 2021  <a href="paper/tnnls2021-hawk.pdf">[paper]</a> 
+<p><span class="style11">&bull; Y. Hei', R. Yang', H. Peng, L. Wang, X. Xu, J. Liu, H. Liu, J. Xu, L. Sun. Hawk: Reliable Android Malware Detection through Heterogeneous Graph Neural Network. IEEE Trans. on Neural Networks and Learning Systems (TNNLS), 2021  <a href="paper/tnnls2021-hawk.pdf">[paper]</a> 
 </span></p>
 
 <p><span class="style11">&bull; Y. Song, T. Wo, R. Yang*, Q. Shen and J. Xu. Joint Optimization of Cache Placement and Request Routing in Unreliable Networks. Journal of Parallel and Distributed Computing (JPDC), 2021 <a href="paper/jpdc2021.pdf">[paper]</a>
@@ -246,6 +246,8 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 </span></p>
 
 <p><span class="style11">&bull; D. Zou, H. Peng, X. Huang, R. Yang, J. Li, J. Wu, C. Liu, P. S. Yu. SE-GSL: A General and Effective Graph Structure Learning Framework through Structural Entropy Optimization. ACM WWW 2023 <a href="paper/www2023-segsl.pdf">[paper]</a></span></p>
+
+<p><span class="style11">&bull; J. Zhao, R. Yang, S. Qiu, Z. Wang. Enhancing High-dimensional Bayesian Optimization by Optimizing the Acquisition Function Maximizer Initialization. arXiv Preprint, arXiv:2302.08298, 2023 <a href="https://arxiv.org/abs/2302.08298.pdf">[arxiv]</a> </span></p>
 
 <p><span class="style11">&bull; Z. Wen, H. Hu, R. Yang*, B. Qian, R. Sham, R. Sun, J. Xu, P. Patel, O. Rana, S. Dustdar, R. Ranjan. Orchestrating Networked Machine Learning Applications using Autosteer. IEEE Internet Computing, 2022 <a href="paper/ic2022.pdf">[paper]</a> 
 </span></p>
