--- a/presentations.html
+++ b/presentations.html
@@ -99,7 +99,7 @@ p{ margin:10px auto}
 &nbsp;
 </div>
 
-<p><span class="style10">Presentations &nbsp;&nbsp;&nbsp; <a href="./index.html">[home]</a> 
+<p><span class="style10">Presentations &nbsp;<a href="./index.html">[<img src="icons/home.gif" width="17" height="17" border="0"/>]</a>
 </span>&nbsp;&nbsp; &nbsp;&nbsp;</p>
 <hr style="width:100%;text-align:left;margin-left:0">
 
