--- a/services.html
+++ b/services.html
@@ -96,7 +96,7 @@ p{ margin:10px auto}
 &nbsp;
 </div>
 
-<p><span class="Bolder">Services <a href="./index.html">[home]</a></span></p>
+<p><span class="Bolder">Services &nbsp;<a href="./index.html">[<img src="icons/home.gif" width="17" height="17" border="0"/>]</a>
 <hr style="width:100%;text-align:left;margin-left:0">
 
 
