--- a/index.html
+++ b/index.html
@@ -171,7 +171,6 @@ p{ margin:10px auto}
 </td>
 <td align="left">
 <div align="left">
-&nbsp;
 </div>
 
 <center>
@@ -193,11 +192,11 @@ p{ margin:10px auto}
 
 
 <div id="div_news">
-<p class="Bolder">What's New</p>
+<p class="Bolder"><img src="icons/news-banner.png" width="25" height="25" border="0"/> What's New</p>
 
-<p><span class="style11"> <span class="red">[Call for Papers]</span> <a href="call4papers/BDCC-SI.pdf" style="text-decoration: none">"Machine Learning for Dependable Edge Computing Systems and Services"</a> Special Issue in the journal of Big Data and Cognitive Computing (BDCC), deadline: <span class="red">31 Oct 2023</span> </span></p>
+<p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> <span class="red">[Call for Papers]</span> <a href="call4papers/BDCC-SI.pdf" style="text-decoration: none">"Machine Learning for Dependable Edge Computing Systems and Services"</a> Special Issue in the journal of Big Data and Cognitive Computing (BDCC), (SCI-indexed), deadline: <span class="red">31 Oct 2023</span> </span></p>
 
-<p><span class="style11"> <span class="red">[Call for Papers]</span> <a href="call4papers/Electronics-SI.pdf" style="text-decoration: none">"Machine Intelligent Information Systems"</a> Special Issue in the journal of Electronics (SCI-indexed, IF=2.690), deadline: <span class="red">15 August 2023</span> </span></p>
+<p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> <span class="red">[Call for Papers]</span> <a href="call4papers/Electronics-SI.pdf" style="text-decoration: none">"Machine Intelligent Information Systems"</a> Special Issue in the journal of Electronics (SCI-indexed, IF=2.690), deadline: <span class="red">15 August 2023</span> </span></p>
 
 <p><span class="style11"> <img src="icons/news.gif" width="25" height="12" border="0"/> I will be joining Beihang University as Associate Professor in Summer 2023. I'm actively looking for strong and motivated students and welcome applicants from diverse backgrounds. </span></p>
 
@@ -212,7 +211,7 @@ p{ margin:10px auto}
 
 <div id="div_bio">
 
-<p class="Bolder">Short Bio</p> 
+<p class="Bolder"><img src="icons/bio-banner.png" width="25" height="25" border="0"/> Short Bio</p> 
 
 <p><span class="style11"> I am currently a lead Research Fellow funded by UK EPSRC, 
 	with the <a href="https://eps.leeds.ac.uk/computing" style="text-decoration: none">School of Computing</a>, 
@@ -250,7 +249,7 @@ p{ margin:10px auto}
 
 <div id="div_interest">
 
-<p><span class="Bolder">Research Interests </span></p>
+<p><span class="Bolder"><img src="icons/research-banner.png" width="25" height="25" border="0"/> Research Interests</span></p>
 <p><span class="style11">Broadly, I am interested in designing system modules and/or mechanisms for tackling trade-offs in efficiency, performance, reliability and cost for distributed systems of big data, cloud computing and IoT at scale. My research mainly focuses on: </span></p>
 	<p><span class="style11">&bull; Resource efficiency of large-scale datacenters through 
 		QoS-aware scheduling and resource management [<a href="paper/vldb2014.pdf" style="text-decoration: none">VLDB'14</a>,<a href="paper/icdcs2018.pdf" style="text-decoration: none">ICDCS'18</a>,<a href="paper/socc2019-perphon.pdf" style="text-decoration: none">SoCC'19</a>,<a href="paper/tpds2020-rose.pdf" style="text-decoration: none">TPDS'20a</a>,<a href="paper/ccgrid2021.pdf" style="text-decoration: none">CCGRID'21</a>,<a href="paper/tpds2022-toposcaling.pdf" style="text-decoration: none">TPDS'22a</a>], 
@@ -267,7 +266,7 @@ p{ margin:10px auto}
 
 
 <div id="div_exp">
-<p><span class="Bolder">Education</span></p>
+<p><span class="Bolder"><img src="icons/edu-banner.png" width="25" height="25" border="0"/> Education</span></p>
 
 <p><span class="style11">&bull;  2007.9 - 2011.6: &nbsp;&nbsp; BSc. Computer Science (equivalent to 1st Class Honours), supervised by Prof. Tianyu Wo, Beihang University, China &nbsp;&nbsp;</span></p>
 
@@ -275,7 +274,7 @@ p{ margin:10px auto}
 
 <p><span class="style11">&bull;  2011.9 - 2017.1: &nbsp;&nbsp; Exchange PhD. Student (funded by China 973 iVCE Grant and EPSRC CoLab Grant), supervised by Prof. Jie Xu and <a href="http://www.paultownend.com/" style="text-decoration: none">Dr. Paul Townend</a>, <a href="http://www.leeds.ac.uk" target="_blank" style="text-decoration: none"> University of Leeds</a>, UK &nbsp;&nbsp; </span></p>
 
-<p><span class="Bolder">Academia & Industry Experience  </span></p>
+<p><span class="Bolder"><img src="icons/job-banner.png" width="25" height="25" border="0"/> Academia & Industry Experience</span></p>
 
 <p><span class="style11">&bull; 2011.9 - 2017.2: &nbsp; Teaching and Research Assistant, Team Leader, Networked Computing Group and MSDS, Beihang University, Beijing, China </span></p> 
 
@@ -298,7 +297,7 @@ p{ margin:10px auto}
 
 <div id="div_pub">
 
-<p><span class="Bolder">Selected Recent Publications </span></p>
+<p><span class="Bolder"><img src="icons/paper-banner.png" width="25" height="25" border="0"/> Selected Recent Publications </span></p>
 
 
 <p><span class="style11">~$ pub -rl</span></p> 
@@ -345,7 +344,7 @@ p{ margin:10px auto}
 
 <div id="div_grants">
 
-<p><span class="Bolder">Selected Research Grants</span></p>
+<p><span class="Bolder"><img src="icons/grant-banner.png" width="25" height="25" border="0"/> Selected Research Grants</span></p>
 
 <p><span class="style11">  
 I had the opportunity to work closely with many institutes around the world and engaged in many government/industry funded research projects to solve real-world problems with innovative cloud and analytic technologies.</span></p>
@@ -385,7 +384,7 @@ I had the opportunity to work closely with many institutes around the world and 
 <div id="div_team">
 
 
-<p><span class="Bolder">Student Supervision </span></p>
+<p><span class="Bolder"><img src="icons/supervision-banner.png" width="25" height="25" border="0"/> Student Supervision </span></p>
 
 
 <p><span class="style11"> 
@@ -443,7 +442,7 @@ I have been collaborating closely with many brilliant researchers around the wor
 
 <div id="div_teaching">
 
-<p><span class="Bolder">Teaching and Presentations </span></p>
+<p><span class="Bolder"><img src="icons/presentation-banner.png" width="25" height="25" border="0"/> Teaching and Presentations </span></p>
  
 <p><span class="style11">&bull; Cloud Computing (CS61839, Graduate Level, Beihang University), Spring 2017 (together with Prof. Chunming Hu et. al)</span></p> 
 
@@ -455,9 +454,9 @@ I have been collaborating closely with many brilliant researchers around the wor
 
 
 <div id="div_services">
-<p><span class="Bolder">Selected Professional Services </span></p>
+<p><span class="Bolder"><img src="icons/service-banner.png" width="22" height="25" border="0"/> Selected Professional Services </span></p>
 
-<p><span class="style11">&bull; Lead Guest Editor: <a href="call4papers/BDCC-SI.pdf" style="text-decoration: none">"Machine Learning for Dependable Edge Computing Systems and Services"</a> Special Issue in the journal of Big Data and Cognitive Computing (BDCC) </span></p>
+<p><span class="style11">&bull; Lead Guest Editor: <a href="call4papers/BDCC-SI.pdf" style="text-decoration: none">"Machine Learning for Dependable Edge Computing Systems and Services"</a> Special Issue in the journal of Big Data and Cognitive Computing (BDCC), (SCI-indexed)</span></p>
 <p><span class="style11">&bull; Guest Editor: <a href="call4papers/Electronics-SI.pdf" style="text-decoration: none">"Machine Intelligent Information Systems"</a> Special Issue in the journal of Electronics (SCI-indexed, IF=2.690) </span></p>
 <p><span class="style11">&bull; Review Editor@Editorial Board: Frontiers in Big Data, Frontiers in High Performance Computing  </span></p>
 
@@ -471,7 +470,7 @@ I have been collaborating closely with many brilliant researchers around the wor
 
 <p><span class="style11">&bull; More professional services can be found here: <a href="services.html" style="text-decoration: none">~$ services</a> </span></p>
 
-<p><span class="Bolder">Selected Awards</span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
+<p><span class="Bolder"><img src="icons/award-banner.png" width="25" height="25" border="0"/>Selected Awards</span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
 
 <p><span class="style11">&bull;	  <strong>Alan Turing Institute Post-Doctoral Enrichment Award</strong>, 2022 </p>
 
@@ -491,8 +490,8 @@ I have been collaborating closely with many brilliant researchers around the wor
 
 
 <div id="div_misc">
-<p><span class="Bolder">Misc </span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
-<p><span class="style11"> Outside of work, I really enjoy traditional chinese calligraphy, architectural design, cooking world wide foods, music and long-distance running.
+<p><span class="Bolder"><img src="icons/misc-banner.png" width="25" height="25" border="0"/> Misc</span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
+<p><span class="style11"> Outside of work, I really enjoy  <img src="icons/running.png" width="15" height="15" border="0"/> long-distance running, <img src="icons/calligraphy.png" width="15" height="15" border="0"/> traditional chinese calligraphy, <img src="icons/architecture.png" width="15" height="15" border="0"/> architectural design, <img src="icons/cooking.png" width="15" height="15" border="0"/> cooking world wide foods, and <img src="icons/music.png" width="15" height="15" border="0"/> music.
 </span></p>
 </div>
 
