--- a/publications_topics.html
+++ b/publications_topics.html
@@ -99,7 +99,7 @@ p{ margin:10px auto}
 &nbsp;
 </div>
 
-<p><span class="style10">Publications &nbsp;&nbsp;&nbsp; <a href="./index.html">[Home]</a> 
+<p><span class="style10">Publications &nbsp; <a href="./index.html">[<img src="icons/home.gif" width="17" height="17" border="0"/>]</a> 
 	<a href="./publications_topics.html">[By Topic]</a>
 	<a href="./publications.html">[By Year]</a></span>&nbsp;&nbsp; &nbsp;&nbsp;</p>
 
