--- a/publications_topics.html
+++ b/publications_topics.html
@@ -113,6 +113,10 @@ p{ margin:10px auto}
 <p lang="en-US"><span class="red"> Distributed System and Resource Management: Scheduling and Orchestration </span></p>
 
 
+<p><span class="style11">&bull; R. Yang and J. Xu. Resilient QoS-Aware Workload Co-Scheduling and User Anomaly Detection in Shared Computing Clusters, the UK Alan Turing Institute Workshop on Edge-Cloud Infrastructure for Distributed Intelligent Computing. 
+	<a href="paper/ati2023-poster.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
+	</span></p>
+	
 <p><span class="style11">&bull; R. Yang', J. Zhu', X. Sun, T. Wo, C. Hu, H. Peng, J. Xiao, A. Y. Zomaya, J. Xu. QoS-Aware Co-Scheduling for Distributed Long-Running Applications on Shared Clusters, IEEE Trans. on Parallel and Distributed Systems (TPDS), 2022
 <a href="paper/tpds2022-toposcaling.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> 
 </span></p>
