--- a/index.html
+++ b/index.html
@@ -198,11 +198,13 @@ p{ margin:10px auto}
 
 <p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> <span class="red">[Call for Papers]</span> <a href="call4papers/Electronics-SI.pdf" style="text-decoration: none">"Machine Intelligent Information Systems"</a> Special Issue in the journal of Electronics (SCI-indexed, IF=2.690), deadline: <span class="red">15 August 2023</span> </span></p>
 
-<p><span class="style11"> <img src="icons/news.gif" width="25" height="12" border="0"/> I will be joining Beihang University as Associate Professor in Summer 2023. I'm actively looking for strong and motivated students and welcome applicants from diverse backgrounds. </span></p>
+<p><span class="style11"> <img src="icons/news.gif" width="25" height="12" border="0"/> (20/04/2023) Will present a poster on <a href="paper/ati2023-poster.pdf">Resilient QoS-Aware Workload Co-Scheduling and User Anomaly Detection in Shared Computing Clusters</a> in the UK Alan Turing Workshop on Edge-Cloud Infrastructure for Distributed Intelligent Computing.</span></p>
 
-<p><span class="style11"> <img src="icons/news.gif" width="25" height="12" border="0"/>(21/02/2023) Our work on affinity-aware multi-dimensional time-varying resource packing is accepted by Journal of Parallel and Distributed Computing (JPDC). The <a href="https://github.com/DSSGroup-Leeds/LRA-binpacking-expe" style="text-decoration: none"> algorithm suite </a> is publicly available. </span></p>
+<p><span class="style11"> <img src="icons/news.gif" width="25" height="12" border="0"/> (01/03/2023) I will be joining Beihang University as Associate Professor in Summer 2023. I'm actively looking for strong and motivated students and welcome applicants from diverse backgrounds. </span></p>
 
-<p><span class="style11"> <img src="icons/news.gif" width="25" height="12" border="0"/>(25/01/2023) Two papers are accepted by the Web Conference (WWW'23). Many congrats to Yingguang, Dongcheng and Xiang! </span></p>
+<p><span class="style11"> (21/02/2023) Our work on affinity-aware multi-dimensional time-varying resource packing is accepted by Journal of Parallel and Distributed Computing (JPDC). The <a href="https://github.com/DSSGroup-Leeds/LRA-binpacking-expe" style="text-decoration: none"> algorithm suite </a> is publicly available. </span></p>
+
+<p><span class="style11"> (25/01/2023) Two papers are accepted by the Web Conference (WWW'23). Many congrats to Yingguang, Dongcheng and Xiang! </span></p>
 
 <p><span class="style11">~$ No news is good news...Check <a href="news.html">older events</a>. </span></p>
 </div>
@@ -349,15 +351,15 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="style11">~$  <strong> grants -l </strong> </span></p>
 
-<p><span class="style11">&bull; Algorithmic Scheduling Support for Efficient AI Model Training (~£35K), Kuaishou Research Gift Award, Co-I, 2023 </span></p> 
+<p><span class="style11">&bull; Algorithmic Scheduling Support for Efficient AI Model Training (~£35K), Kuaishou Research Gift Award, Co-I, 2023 - 2024  </span></p> 
 
 <p><span class="style11">&bull; Resilient Multi-Agent Deep Reinforcement Learning for Green Logistics Scheduling, funded by the Turing Enrichment Scheme, the Alan Turing Institute, PI, 2022.3 - 2022.10 </span></p> 
 
-<p><span class="style11">&bull; New Edge-Cloud Infrastructure for Distributed Intelligent Computing (£55K), funded by Turing Pilot Project, the Alan Turing Institute, Co-I, 2022.1 - 2023.3 </span></p> 
+<p><span class="style11">&bull; New Edge-Cloud Infrastructure for Distributed Intelligent Computing (£55K), funded by Turing Pilot Project, the Alan Turing Institute, Co-I, 2022.1 - 2023.4 </span></p> 
 
-<p><span class="style11">&bull; Algorithmic Support for Massive Scale Distributed Systems (EP/T01461X/1, £1.1M) funded by UK Engineering and Physical Sciences Research Council (EPSRC), co-author and project leader, 2020.9 - 2023.8 </span></p> 
+<p><span class="style11">&bull; Algorithmic Support for Massive Scale Distributed Systems (EP/T01461X/1, £1.1M) funded by UK Engineering and Physical Sciences Research Council (EPSRC), co-author and project leader, 2020.9 - 2023.4 </span></p> 
 
-<p><span class="style11">&bull; Farm Observatory Instrumentation (£4M+), University of Leeds, module lead, 2021.3 - present </span></p> 
+<p><span class="style11">&bull; Farm Observatory Instrumentation (£4M+), University of Leeds, module lead, 2021.3 - 2023.4 </span></p> 
 
 <p><span class="style11">&bull; Server Modelling Capability (No.45904, £300K), funded by Innovate UK Programme, UKRI, co-author and module lead, 2020.2 - 2020.8 </span></p>
 
